package baseNoStates;

// door states, static declarations (only one assignation for all objects of the class)

public class States {
  public static String LOCKED = "locked"; 
  public static String UNLOCKED = "unlocked";
  public static String UNLOCKED_SHORTLY = "unlocked_shortly";
  public static String PROPPED = "propped";
}
